--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+* {
+  font-family: "Bree Serif", serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+}
+.active {
+  background-color: blue;
+  color: white;
+}
+.swal2-checkbox {
+  /* change the checkbox position */
+  align-items: flex-end;
+  flex-flow: row-reverse;
+}
+
+.swal2-actions {
+  opacity: 0.4;
+}
+
+.swal2-content {
+  /* change the row order */
+  flex-direction: column-reverse;
+  display: flex;
+}
+::-webkit-scrollbar {
+  width: 0.4rem;
+}
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey;
+  border-radius: 10px; */
+  background: rgb(107, 107, 109);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(0, 7, 26);
+  border-radius: 10px; 
+}
+
+/* body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+ul {
+  list-style: none;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+} */
