--- a/src/components/P_Professores/nav/nav.module.css
+++ b/src/components/P_Professores/nav/nav.module.css
@@ -1,1 +1,20 @@
-.Nav {}
+.custom1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;;
+    overflow: hidden;
+    line-height: 0;
+    z-index: 1;
+}
+
+.custom2 {
+    position: relative;
+    display: block;
+    width: calc(100% + 3.3px);
+    height: 309px;
+}
+
+.custom3 {
+    fill: #FF0000;
+}
